# django-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
tests/: gen_project.sh  test.sh  test_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .stylelintrc  Dockerfile  Makefile  Procfile  README.md  docker-compose.demo.yaml  heroku.yml  manage.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/config/: uwsgi.ini  webpack.base.js  webpack.devel.js  webpack.production.js
{{cookiecutter.project_slug}}/frontend/: index.js
{{cookiecutter.project_slug}}/script/: bootstrap  clean  compilemessages  coverage  docs  format  lint  makemessages  readme.md  setup  test  update
{{cookiecutter.project_slug}}/tests/integration/: test_urls.py
{{cookiecutter.project_slug}}/tests/unit/user/: test_models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/hello/: urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py  base.py  develop.py  local.py.example  logging.py  production.py  testing.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/example/: hello.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/hello/: hello.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/user/: admin.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/user/migrations/: 0001_initial.py
